Added console log test code to index.html on Test branch

--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,9 @@
             }
         });
     }
+    function test_print(){
+        console.log("test code");
+        }
 </script>
 
 <h1>Assignment 1</h1>
@@ -79,6 +82,8 @@
   <input type="text" id="delete_tweet" name="delete_tweet">
 <input type="submit" value="Delete Tweet">  
 </form> -->
+
+
 
 
 
